syntax = "proto3";
option java_multiple_files = true;
package org.gersty.grpc.standalone;

message HelloRequest {
    string firstName = 1;
    string lastName = 2;
}

message HelloResponse {
    string greeting = 1;
}

service StandaloneService {
    rpc hello(HelloRequest) returns (HelloResponse);
}